For Java 11, parse typetools/jdk as stub files (#2810)